--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-be-happy-and-eat-ze-bugs 
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>mRNA Token </title>
+   </head>
+   <body style="background-color:black">
+      <center>
+         <img src="img/Maintain-humanity-under-500,000,000-in-perpetual-balance-with-nature" alt="mRNA-token" width="25%">  
+         <p style = "color:rgb(212,175,55); font-size:40px;">
+	   You can't dump this! mRNA.
+         </p>
+         <p style="color:rgb(212,175,55); font-size:22px;">
+            Be happy and eat ze bugs.
+          </p>   
+         <video controls width="800">
+            <source src="video/Own-Nothing-Be-Happy-(feat.-Klausi-McSchwabbin')-snicklink.de.mp4" type="video/mp4">
+        </video>
+         <p style="color:rgb(212,175,55); font-size:16px;">
+            Asset details
+         </p>
+         <p>
+            <a href="https://blockstream.info/liquid/asset/da642a1379ec0d6014d3369fb73488a94e7540c14431381c2a0c0e55f9b12197" target="_blank" style="color:rgb(212,175,55)">blockstream.info</a>
+            <a href="https://liquid.network/assets/asset/da642a1379ec0d6014d3369fb73488a94e7540c14431381c2a0c0e55f9b12197" target="_blank" style="color:rgb(212,175,55)">mempool.space</a>
+         </p>
+         <p style="color:rgb(212,175,55); font-size:16px;">
+            Wallets
+         </p>
+         <p>
+            <a href="https://vulpem.com/marina" target="_blank" style="color:rgb(212,175,55)">Marina</a>
+            <a href="https://blockstream.com/green/" target="_blank" style="color:rgb(212,175,55)">Blockstream Green</a>
+            <a href="https://sideswap.io/" target="_blank" style="color:rgb(212,175,55)">SideSwap</a>
+         </p>
+         <p style="color:rgb(212,175,55); font-size:16px;">
+            Markets
+         </p>
+         <p>
+            <a href="https://sideswap.io/" target="_blank" style="color:rgb(212,175,55)">SideSwap</a>
+            <a href="https://tdex.network/" target="_blank" style="color:rgb(212,175,55)">TDEX</a>
+         </p>
+      </center>
+   </body>
+</html>
