--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Markets
          </p>
          <p>
-            <a href="https://sideswap.io/" target="_blank" style="color:rgb(136,8,8)">SideSwap</a>
+            <a href="https://sideswap.io/swap-market/?product=mRNA" target="_blank" style="color:rgb(136,8,8)">SideSwap</a>
             <a href="https://tdex.network/" target="_blank" style="color:rgb(136,8,8)">TDEX</a>
          </p>
       </center>
